--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -56,6 +56,14 @@ jobs:
           pushd luci-app-openclash/tools/po2lmo
           make && sudo make install
           popd
+      - name: 自定义插件主题。
+        run: |
+          cd package
+          mkdir openwrt-packages
+          cd openwrt-packages
+          git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
+          git clone https://github.com/Ameykyl/luci-app-koolproxyR
+          git clone https://github.com/rosywrt/luci-theme-rosy
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
