--- a/.config
+++ b/.config
@@ -60,4 +60,15 @@ CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-netgear=y
 CONFIG_PACKAGE_openssh-sftp-client=y
 CONFIG_PACKAGE_openssh-client=y
-CONFIG_PACKAGE_luci-app-oaf=y
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_diffutils=y
+CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_ca-certificates=y
+CONFIG_PACKAGE_libustream-openssl=y
+CONFIG_PACKAGE_lua-openssl=y
+CONFIG_PACKAGE_luci-app-godproxy=y
+CONFIG_PACKAGE_
+CONFIG_PACKAGE_
