--- a/.config
+++ b/.config
@@ -70,5 +70,5 @@ CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_lua-openssl=y
 CONFIG_PACKAGE_luci-app-godproxy=y
-CONFIG_PACKAGE_
+CONFIG_PACKAGE_luci-theme-atmaterial=y
 CONFIG_PACKAGE_
