--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -64,6 +64,7 @@ jobs:
           git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
           git clone https://github.com/godros/luci-app-godproxy.git
           git clone https://github.com/rosywrt/luci-theme-rosy
+          git clone https://github.com/destan19/OpenAppFilter.git
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
