--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -65,6 +65,7 @@ jobs:
           git clone https://github.com/godros/luci-app-godproxy.git
           git clone https://github.com/rosywrt/luci-theme-rosy
           git clone https://github.com/destan19/OpenAppFilter.git
+          git clone https://github.com/Lienol/openwrt-package.git
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
