--- a/.config
+++ b/.config
@@ -72,3 +72,4 @@ CONFIG_PACKAGE_luci-app-godproxy=y
 CONFIG_PACKAGE_luci-theme-atmaterial=y
 CONFIG_PACKAGE_luci-theme-rosy=y
 CONFIG_PACKAGE_luci-app-oaf=y
+CONFIG_PACKAGE_luci-app-fileassistant=y
