--- a/.config
+++ b/.config
@@ -73,3 +73,4 @@ CONFIG_PACKAGE_luci-theme-atmaterial=y
 CONFIG_PACKAGE_luci-theme-rosy=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-fileassistant=y
+CONFIG_PACKAGE_open-vm-tools=y
