--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -67,6 +67,7 @@ jobs:
           git clone https://github.com/destan19/OpenAppFilter.git
           git clone https://github.com/Lienol/openwrt-package.git
           git clone https://github.com/fangli/openwrt-vm-tools
+          git clone https://github.com/sirpdboy/sirpdboy-package.git
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
