--- a/.config
+++ b/.config
@@ -74,3 +74,4 @@ CONFIG_PACKAGE_luci-theme-rosy=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-fileassistant=y
 CONFIG_PACKAGE_open-vm-tools=y
+CONFIG_PACKAGE_luci-app-NetSpeedTest=y
